<resources>
    <string name="app_name">Android_Calculator</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="dot" translatable="false">.</string>
    <string name="equal" translatable="false">=</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="multiply" translatable="false">*</string>
    <string name="division" translatable="false">/</string>
    <string name="cancel" translatable="false">C</string>
    <string name="counters">Counters</string>
    <string name="error_message">ArithmeticError!</string>
    <string name="error_type_mismatch">TypeMismatch!</string>
    <string name="exit_activity">Close</string>
    <string name="title_menu">Calculator</string>
    <string name="material_light">Light Theme</string>
    <string name="material_dark">Dark Theme</string>
    <string name="edit_text_title">Choose theme for calculator</string>
    <string name="button_return_back">Return back</string>
    <string name="choice_theme">Choice Theme</string>
</resources>