<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/counters"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/counter" />

    <Button
        android:id="@+id/button_num1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_1"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_num3"
        app:layout_constraintEnd_toEndOf="@+id/button_cancel"
        app:layout_constraintStart_toStartOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_num3" />

    <Button
        android:id="@+id/button_num2"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_2"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_num3"
        app:layout_constraintEnd_toEndOf="@+id/button_division"
        app:layout_constraintStart_toStartOf="@+id/button_division"
        app:layout_constraintTop_toTopOf="@+id/button_num3" />

    <Button
        android:id="@+id/button_num3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_3"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_num6"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_multiply"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_num4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_4"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_num6"
        app:layout_constraintEnd_toEndOf="@+id/button_cancel"
        app:layout_constraintStart_toStartOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_num6" />

    <Button
        android:id="@+id/button_num5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_5"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_num6"
        app:layout_constraintEnd_toEndOf="@+id/button_division"
        app:layout_constraintStart_toStartOf="@+id/button_division"
        app:layout_constraintTop_toTopOf="@+id/button_num6" />

    <Button
        android:id="@+id/button_num6"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_6"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_num9"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_multiply"
        app:layout_constraintTop_toBottomOf="@+id/button_num3" />

    <Button
        android:id="@+id/button_num7"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_7"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_num9"
        app:layout_constraintEnd_toEndOf="@+id/button_cancel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_num9" />

    <Button
        android:id="@+id/button_num8"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_8"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_num9"
        app:layout_constraintEnd_toEndOf="@+id/button_division"
        app:layout_constraintStart_toStartOf="@+id/button_division"
        app:layout_constraintTop_toTopOf="@+id/button_num9" />

    <Button
        android:id="@+id/button_num9"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/_9"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_dot"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_multiply"
        app:layout_constraintTop_toBottomOf="@+id/button_num6" />

    <Button
        android:id="@+id/button_num0"
        android:layout_width="@dimen/button_double_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:layout_marginTop="8dp"
        android:text="@string/_0"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_dot"
        app:layout_constraintEnd_toEndOf="@+id/button_division"
        app:layout_constraintStart_toStartOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_dot" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/dot"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_multiply"
        app:layout_constraintTop_toBottomOf="@+id/button_num9" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_double_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/equal"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_dot"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintStart_toStartOf="@+id/button_minus"
        app:layout_constraintTop_toTopOf="@+id/button_num9" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_double_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/plus"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_num6"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintStart_toStartOf="@+id/button_minus"
        app:layout_constraintTop_toTopOf="@+id/button_num3" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/minus"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_multiply"
        app:layout_constraintTop_toTopOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/multiply"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_num3"
        app:layout_constraintEnd_toStartOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_division"
        app:layout_constraintTop_toBottomOf="@+id/textView_display"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/division"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/cancel"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toBottomOf="@+id/button_multiply"
        app:layout_constraintEnd_toStartOf="@+id/button_division"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_multiply" />

    <TextView
        android:id="@+id/textView_display"
        android:layout_width="@dimen/text_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:background="@android:color/background_light"
        android:gravity="top|end"
        android:text="@string/_0"
        android:textSize="@dimen/number_text_size"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintEnd_toEndOf="@+id/button_minus"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/button_cancel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

</androidx.constraintlayout.widget.ConstraintLayout>